tests/sumo/errors/duplicates/vtype_newstyle_plainemission/errors.sumo
Error: Another vehicle type (or distribution) with the id '1' exists.
Quitting (on error).
